# video-to-essay

./: .gitignore  AGENTS.md  CLAUDE.md  ISSUES.md  LEGAL_NOTES.md  PLAN.md  experiments.yaml  extract_frames.py  main.py  place_images.py  pyproject.toml  requirements.txt  transcriber.py
.github/workflows/: ci.yml
analysis/: llm_call_costs.csv
deploy/: setup.sh  video-to-essay-deliver.service  video-to-essay-discover.service  video-to-essay-download.service  video-to-essay-process.service
deploy/macos/: autodeploy.sh  com.video-to-essay.autodeploy.plist  com.video-to-essay.deliver.plist  com.video-to-essay.discover.plist  com.video-to-essay.download.plist  com.video-to-essay.process.plist  install-autodeploy.sh  setup.sh
docs/: architecture-workers-and-database.md
docs/superpowers/specs/: 2026-03-27-production-frontend-design.md  2026-03-27-production-frontend-plan.md  2026-03-28-landing-page-design.md  2026-03-28-subscription-flow-design.md  2026-03-28-ux-redesign-design.md  2026-03-29-dashboard-redesign-design.md  2026-03-29-s3-storage-migration-design.md  2026-03-29-unsubscribe-channels-design.md  2026-03-30-landing-page-redesign-design.md  2026-03-31-playlist-subscriptions-design.md  2026-04-07-essay-summary-design.md  2026-04-08-filter-shorts-livestreams-design.md  2026-04-08-testing-strategy-design.md  2026-04-29-experiment-harness-design.md  2026-04-29-litellm-integration-design.md  2026-04-29-litellm-integration-plan.md  2026-04-29-runs-viewer-design.md
examples/: sample_essay.md  sample_transcript.txt
scripts/: eval_misattribution_fix.py  export_s3_llm_call_costs.py  templar_market_cap.py
src/video_to_essay/: analytics.py  api.py  db.py  deliver_worker.py  diarize.py  discover_worker.py  download_worker.py  email_sender.py  experiment.py  extract_frames.py  filter_sponsors.py  llm.py  llm_client.py  llm_cost_export.py  main.py  place_images.py  process_worker.py  s3.py  scorer.py  summarize.py  transcriber.py  worker.py
tests/: conftest.py  test_diarize.py  test_discover_worker.py  test_email_sender.py  test_experiment.py  test_extract_frames.py  test_filter_sponsors.py  test_llm.py  test_llm_cost_export.py  test_pipeline_chain.py  test_place_images.py  test_process_worker.py  test_s3.py  test_scorer.py  test_smoke.py  test_summarize.py  test_transcriber.py
tests/db/: conftest.py  test_db.py  test_deliver_worker.py  test_discover_worker.py  test_download_worker.py  test_process_worker.py
web/: next.config.ts  package-lock.json  package.json  test-db.js  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
(+57 files in other folders)
