[project]
name = "video-to-essay"
version = "0.1.0"
description = "Convert YouTube videos into illustrated markdown essays"
requires-python = ">=3.14"
dependencies = [
    "agentmail>=0.4.0",
    "anthropic>=0.79.0",
    "boto3>=1.38.0",
    "imagehash>=4.3.2",
    "markdown>=3.7",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "posthog>=3.0",
    "sentry-sdk>=2.0",
    "typer>=0.23.0",
    "yt-dlp>=2026.3",
]

[project.scripts]
video-to-essay = "video_to_essay.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22",
    "ruff>=0.4",
    "testcontainers[postgres]>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: slow smoke tests (build, lint, import)"]

[tool.ruff.lint]
ignore = ["E402", "F821"]

[tool.ruff.lint.per-file-ignores]
"src/video_to_essay/main.py" = ["E402"]

[tool.coverage.run]
source = ["video_to_essay"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_to_essay"]
